Menu: Fix small gap in menu

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -196,7 +196,7 @@ ul[role="menubar"] {
 
     #main-menu-border {
         position: relative;
-        padding: 12px 0;
+        padding: 10px 0;
         border-bottom: 4px solid $dividergrey;
     }
 
@@ -226,7 +226,7 @@ ul[role="menubar"] {
 
             border-bottom: 4px solid $dividergrey;
             z-index: 999;
-            padding-top: 16px;
+            padding-top: 14px;
             position: absolute;
             left: 0;
             width: 100%;
